compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case10.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 589
expression: "case [3], 1.1 { x, y if x >. y -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:25
  │
1 │ case [3], 1.1 { x, y if x >. y -> 1 }
  │                         ^

Expected type:

    Float

Found type:

    List(Int)


